--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,39 @@ doctype html
 html(lang='en')
     head
         meta(charset='utf-8')
-        title = title 
+        title= 'Ygo Banlist Checker API'
+        style.
+            h1, h2 { 
+                text-align: center;
+                font-style: normal;
+                font-size: 3rem;
+            }
+            
+            h2 {
+                font-size: 1.5rem;
+            }
+            #container {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-content: center;
+            }
+            #divider {
+                width: 50%;
+                height: 1px;
+                background-color: black;
+            }
+            p {
+                text-align: center;
+            }
     body
-        h1= title 
+        h1.center= 'Ygo Banlist Checker API'
+        h2.center= 'Get your latest banlist update!' 
+        hr#divider
+        #container.col  
+            p= current_banlist_date 
+            //- ul 
+            //-  each val, key in forbidden 
+            //-     li= val
+                
