--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ html(lang='en')
             .row 
                 .input-group.mb-3.mt-3#email
                     span.input-group-text @
-                    input.form-control(placeholder="Trage dich hier ein!" type="text") 
+                    input.form-control(placeholder="Trage dich hier ein!" readonly) 
                 button(type="button")#button.btn.btn-success.mx-3 Senden
             hr#divider
         #container.col  
