Disabled the button

--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@ html(lang='en')
                 .input-group.mb-3.mt-3#email
                     span.input-group-text @
                     input.form-control(placeholder="Trage dich hier ein!" readonly) 
-                button(type="button")#button.btn.btn-success.mx-3 Senden
+                button(type="button" disabled)#button.btn.btn-success.mx-3 Senden
             hr#divider
         #container.col  
             #date 
